k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31019
    protocol: TCP
  selector:
    app: webapp
  type: ClusterIP
